--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -3,7 +3,7 @@
   div#logo,
   .shadow-slate-5,
   header.px-4.py-2.sticky.top-0.z-99.flex.justify-between.items-center {
-      display: none;
+      display: none !important;
   }
   .from-red-300 + .message {
       background: #dee4e8;
