--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,6 +1,11 @@
 @media only screen and (max-width: 768px) {
+
     html {
-        font-size: 14.5px !important;
+        font-family: Source Code Pro, -apple-system,
+            BlinkMacSystemFont, Segoe UI, Roboto,
+            Helvetica Neue, Arial, Noto Sans, sans-serif,
+            Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
+            Noto Color Emoji !important;
     }
 
     .message pre {
