--- a/src/styles/tooltip.css
+++ b/src/styles/tooltip.css
@@ -5,7 +5,7 @@
 [tooltip]::after {
   content: attr(tooltip);
   position: absolute;
-  display: none;
+  display: block;
   background: inherit;
   text-align: center;
   color: inherit;
@@ -26,7 +26,6 @@
 [tooltip]:hover::before {
   opacity: 1;
 }
-
 /* 右侧 */
 [tooltip][position="right"]::before {
   top: 50%;
@@ -34,14 +33,12 @@
   margin-left: -3px;
   transform: translateY(-50%) rotate(90deg);
 }
-
 [tooltip][position="right"]::after {
   top: 50%;
   left: 100%;
   margin-left: 5px;
   transform: translateY(-50%);
 }
-
 /* 左侧 */
 [tooltip][position="left"]::before {
   top: 50%;
@@ -49,14 +46,12 @@
   margin-left: -9px;
   transform: translateY(-50%) rotate(-90deg);
 }
-
 [tooltip][position="left"]::after {
   top: 50%;
   left: 0;
   margin-left: -5px;
   transform: translateY(-50%) translateX(-100%);
 }
-
 /* 底侧 */
 [tooltip][position="bottom"]::before {
   top: 100%;
@@ -64,7 +59,6 @@
   margin-top: 1px;
   transform: translatex(-50%) rotate(180deg);
 }
-
 [tooltip][position="bottom"]::after {
   top: 100%;
   left: 50%;
