--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -4,7 +4,9 @@ div#logo,
 header.px-4.py-2.sticky.top-0.z-99.flex.justify-between.items-center {
     display: none !important;
 }
-
+html, body {
+    height: 100%;
+}
 @media only screen and (max-width: 768px) {
 
     html {
